--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,14 @@
         android:theme="@style/Theme.Todos"
         tools:targetApi="31">
         <activity
+            android:name=".AboutMe"
+            android:exported="false"
+            android:label="@string/title_activity_about_me"
+            android:theme="@style/Theme.Todos" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"
-            >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
